Fix datatable visibility issue

--- a/src/DataGate/Web/DataGate.Web/wwwroot/css/pharus/dataTable.css
+++ b/src/DataGate/Web/DataGate.Web/wwwroot/css/pharus/dataTable.css
@@ -6,6 +6,10 @@
 *
 */
 
+.dataTables_scrollBody table thead tr {
+    visibility: collapse;
+}
+
 .dataTables_wrapper .bottom {
     margin-bottom: 1.5rem !important;
 }
